css/style.css
/* =========================
   Base Styles
========================= */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
  scroll-padding-top: 100px;
}

body {
  font-family: 'Poppins', sans-serif;
  color: #222;
  background-color: #fff8f0;
  line-height: 1.6;
  scroll-behavior: smooth;
  scroll-padding-top: 80px;
}

main {
  padding: 0 20px;
}

a {
  text-decoration: none;
}

#main-content {
  border-top: 2px dashed #2f4048;
}


/* =========================
   Navbar
========================= */
.navbar {
  width: 100%;
  height: 70px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 2rem;
  background-color: #162d48;
  position: fixed;
  top: 0;
  z-index: 100;
}

.navbar.scrolled {
  box-shadow: 0 3px 10px rgba(85, 85, 85, 0.25);
}

.navbar-left {
  display: flex;
  align-items: center;
  gap: 10px;
}

.navbar-logo {
  width: 50px;
  height: 50px;
  border-radius: 100%;
}

.navbar-title h1 {
  font-size: 1.5rem;
  color: #e67e22;
  font-weight: 600;
  line-height: 1;
}

.navbar-title p {
  font-size: 0.9rem;
  color: #F8F8FF;
}

.nav-links {
  display: flex;
  list-style: none;
  gap: 2rem;
}

.nav-links a {
  text-decoration: none;
  color: #e67e22;
  font-weight: 500;
  transition: color 0.3s;
}

.nav-links a:hover {
  color: #ff9f43;
}

.btn-login {
  background: transparent;
  border: 1.5px solid #e67e22;
  border-radius: 12px;
  padding: 8px 20px;
  font-weight: 600;
  color: #e67e22;
  cursor: pointer;
  transition: 0.2s;
}

.btn-login:hover {
  color: #F8F8FF;
  background-color: #e67e22;
}


/* =========================
   Hamburger Menu
========================= */
.hamburger {
  display: none;
  flex-direction: column;
  justify-content: space-between;
  width: 25px;
  height: 18px;
  cursor: pointer;
}

.hamburger span {
  display: block;
  height: 3px;
  width: 100%;
  background-color: #e67e22;
  border-radius: 5px;
  transition: all 0.3s ease;
}

/* Animation when active */
.hamburger.active span:nth-child(1) {
  transform: translateY(7.5px) rotate(45deg);
}

.hamburger.active span:nth-child(2) {
  opacity: 0;
}

.hamburger.active span:nth-child(3) {
  transform: translateY(-7.5px) rotate(-45deg);
}


/* =========================
   Home Section
========================= */
#home {
  width: 100%;
  height: 100svh;
  display: flex;
}

.destination-details,
.campus-map {
  margin-top: 70px;
}

.destination-details {
  min-width: 310px;
  width: 38%;
  padding: 35px;
  display: flex;
  flex-direction: column;
  gap: 25px;
  background-color: #5e95a1;
  border-right: 1px dotted #2f4048;
}

.destination-details input {
  width: 100%;
  border-radius: 10px;
  font-size: 15px;
  padding: 10px 10px 10px 15px;
  border: none;
  background-color: #dbdbdb;
}

.text-fields {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.routing-form {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.search-container {
  position: relative;
  width: 100%;
}

.autocomplete-results {
  border: 1px solid #ccc;
  border-radius: 10px;
  position: absolute;
  top: 100%;
  margin-top: 1px;
  left: 0;
  background-color: white;
  max-height: 200px;
  overflow-y: auto;
  width: 100%;
  z-index: 1000;
  display: none;
}

.autocomplete-item {
  padding: 8px;
  cursor: pointer;
}

.autocomplete-item:hover {
  background-color: #f0f0f0;
}

.destination-details img {
  max-width: 100%;
  height: auto;
  object-fit: contain;
}

.room-info img {
  max-width: 500px;
  max-height: 40vh;
  width: 100%;
  height: auto;
  object-fit: contain;
  border-radius: 8px;
}

.room-info>h2 {
  color: white;
  border-bottom: #2f4048 solid 2px;
  box-shadow: 0 2px 2px -2px lightgray;
  padding-bottom: 10px;
  margin-bottom: 20px;
}

.route-button {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 15px;
  width: 100%;
}

.route-button button {
  width: 100%;
  height: 40px;
  font-size: 1.05rem;
  box-sizing: content-box;
  padding: 5px;
  border: none;
  border-radius: 10px;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

#norm-route {
  border: 2px #e67e22;
  font-size: 1rem;
  color: #F8F8FF;
  background-color: #e67e22;
  flex: 1 1 0;
}

#er-route {
  background-color: transparent;
  border: 2px solid #2f4048;
  color: #2f4048;
  gap: 20px;
  flex: 2 1 0;
}

#er-route:hover {
  color: #F8F8FF;
  background-color: #2f4048;
  transition: 0.2s;
}

.current-location-details {
  display: flex;
  flex-direction: row;
  gap: 10px;
  margin-top: 5px;
  background-color: rgb(230, 222, 222);
  padding: 10px;
  border-radius: 50px;
}

.current-location-details img {
  width: 30px;
  height: 30px;
}

.details {
  background-color: #dbdbdb;
}

#loc-header {
  color: #2f4048;
  font-weight: normal;
  font-size: 1rem;
}

#loc-info {
  color: #2f4048;
  font-weight: bold;
  font-size: 1rem;
}

.map-wrapper {
  width: 100%;
  position: relative;
  background-color: white;
  padding: 5%;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  gap: 15px;
  overflow: clip;
}

.campus-map {
  transform-origin: center center;
  transition: transform 0.25s ease;
  position: relative;
  display: inline-block;
  cursor: grab;
  user-select: none;
  width: 838px;
  height: 458px;
}

.map-img {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

#map-text-canvas,
#map-line-canvas {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;

  /* minimize blurriness of canvas lines & text */
  /* multiple values to ensure compatibility with most browsers */
  image-rendering: -moz-crisp-edges;
  image-rendering: -webkit-crisp-edges;
  image-rendering: pixelated;
  image-rendering: crisp-edges;
}
/* ... */

